# flutter_application

./: cmd.sh  justfile  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle
ios/Runner/: bridge_generated.native.h  bridge_generated_2.native_2.h
lib/: main.dart
lib/src/: native_2.dart
lib/src/native/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  native.web.dart
lib/src/native_2/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  native_2.dart  native_2.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
native/: Cargo.toml  build.rs
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
native_2/: Cargo.toml  build.rs
native_2/src/: api.rs
plugins/flutter_plugin_1/: README.md  pubspec.yaml
plugins/flutter_plugin_1/android/: build.gradle  settings.gradle
plugins/flutter_plugin_1/example/: pubspec.yaml
plugins/flutter_plugin_1/lib/: flutter_plugin_1.dart
plugins/flutter_plugin_1/linux/: CMakeLists.txt  flutter_plugin_1_plugin.cc  flutter_plugin_1_plugin_private.h
plugins/flutter_plugin_2/: README.md  ffigen copy.yaml  ffigen.yaml  pubspec.yaml
plugins/flutter_plugin_2/src/: CMakeLists.txt  flutter_plugin_2.c  flutter_plugin_2.h
src/: rust.cmake
windows/: CMakeLists.txt  rust.cmake
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+52 files in other folders)
